feat: implemented query parameters in list dataset endpoint
